@@ -1,3 +1,11 @@
+2001-12-09  James Henstridge  <james@daa.com.au>
+
+	* bonobo/bonobo-ui-config-widget.c (widgets_init): use mnemonics
+	for button labels here as well.
+
+	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_state):
+	just call gtk_label_set_use_underline() to set up the mnemonic.
+
 2001-12-07  jacob berkman  <jacob@ximian.com>
 
 	* bonobo/Makefile.am: some fixes to generated files
